--- a/nikonsg/scrapy.cfg
+++ b/nikonsg/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = luxurycity.settings
+default = nikonsg.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = luxurycity
+project = nikonsg
